# aws_todo_server

./: README.md  db.sqlite3  manage.py  pyproject.toml  test.py
api/: .gitignore  admin.py  models.py  urls.py  views.py
aws_todo_back/: asgi.py  settings.py  urls.py  wsgi.py
